# QT-PyQt-PySide-Custom-Widgets

./: .pdm.toml  README.md  pyproject.toml
Custom_Widgets/: AnalogGaugeWidget.py  ProjectMaker.py  RoundProgressBar.py  SpiralProgressBar.py  Widgets.py  WidgetsWorker.py  main.py
Custom_Widgets/ProgressIndicator/: interface.ui  test.py  ui_interface.py
Custom_Widgets/Qss/: SassCompiler.py  SvgToPngIcons.py  colorsystem.py
Custom_Widgets/components/json/: style.json
Custom_Widgets/components/python/: main.py  ui_interface.py
docs/: custom-analog-gauge.md
sample/: main.py
