[project]
name = "QT-Custom-Widgets"
version = "0.1.2"
description = "Custom widgets and widget animations made for Qt applications"
authors = [
    {name = "RayLemon", email = "raylemon0424@gmail.com"},
]
dependencies = [
    "qtpy>=2.2.0",
    "qtsass>=0.3.0",
    # "pyside6>=6.3.1",
    "matplotlib>=3.5.3",
    "mock>=4.0.3",
    "iconify>=0.0.103",
    "cairosvg>=2.5.2",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "GNU General Public Licence v3.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
