[project]
name = "QT-Custom-Widgets"
version = "0.1.7"
description = "Custom widgets and widget animations made for PySide6 applications"
authors = [
    {name = "RayLemon", email = "raylemon0424@gmail.com"},
]
dependencies = [
    "qtsass>=0.3.0",
    "matplotlib>=3.5.3",
    "mock>=4.0.3",
    "iconify>=0.0.103",
    "cairosvg>=2.5.2",
    "pyside6>=6.4.0.1",
]
requires-python = ">=3.10,<3.11"
readme = "README.md"
license = {text = "GNU General Public Licence v3.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
